scrollbar flickering fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,132 +1,140 @@
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700;800;900&display=swap");
 
-  :root {
-    --header-footer-height: 70px;
-  }
+:root {
+  --header-footer-height: 70px;
+}
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  a {
-    text-decoration: none;
-    color: unset;
-  }
+a {
+  text-decoration: none;
+  color: unset;
+}
 
-  body {
-    font-family: 'Poppins', sans-serif;
-  }
+body {
+  font-family: "Poppins", sans-serif;
+}
 
-  .App {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
-  }
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
 
-  .header,
-  .footer {
-    height: var(--header-footer-height);
-    background-color: rgb(29, 28, 28);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.header,
+.footer {
+  height: var(--header-footer-height);
+  background-color: rgb(29, 28, 28);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .infinite-loader {
-    margin-top: 40px;
-    text-align: center;
-  }
+.infinite-loader {
+  margin-top: 40px;
+  text-align: center;
+}
 
-  .main {
-    margin: 20px;
-    position: relative;
-    flex-grow: 1;
-  }
+.main {
+  margin: 20px;
+  position: relative;
+  flex-grow: 1;
+}
 
-  .main-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-auto-rows: minmax(0, auto);
-    align-items: start;
-    /* Align items at the start of the grid cells */
-    /* Set minimum row size to auto */
-    grid-gap: 10px;
-  }
+.infinite-scroll-component::-webkit-scrollbar {
+  display: none;
+}
 
-  .back {
-    margin-left: 20px;
-    margin-top: 10px;
-    cursor: pointer;
-    align-self: flex-start;
-  }
+.main-grid {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(200px, 1fr)
+  );
+  grid-auto-rows: minmax(0, auto);
+  align-items: start;
+  /* Align items at the start of the grid cells */
+  /* Set minimum row size to auto */
+  grid-gap: 10px;
+}
 
-  .loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+.back {
+  margin-left: 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  align-self: flex-start;
+}
 
-  .anime__card {
-    width: 200px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    cursor: pointer;
-  }
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  .anime__card__image {
-    height: 140px;
-    width: 100%;
-  }
+.anime__card {
+  width: 200px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  cursor: pointer;
+}
 
-  .anime__card__image img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
+.anime__card__image {
+  height: 140px;
+  width: 100%;
+}
 
-  .anime__card__details {
-    padding: 5px;
-  }
+.anime__card__image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 
-  .anime__card__details h2,
-  h3 {
-    font-size: 13px;
-    font-weight: 500;
-  }
+.anime__card__details {
+  padding: 5px;
+}
 
-  .anime__card__details h1 {
-    margin-top: 5px;
-    font-size: 15px;
-    font-weight: 500;
-  }
+.anime__card__details h2,
+h3 {
+  font-size: 13px;
+  font-weight: 500;
+}
 
-  .anime__card__details h1 span,
-  .anime__card__details h2 span,
-  .anime__card__details h3 {
-    font-weight: 700;
-    color: #232D3F;
-  }
+.anime__card__details h1 {
+  margin-top: 5px;
+  font-size: 15px;
+  font-weight: 500;
+}
 
-  .anime__card__details h3 span:nth-child(1) {
-    font-weight: 500;
-  }
+.anime__card__details h1 span,
+.anime__card__details h2 span,
+.anime__card__details h3 {
+  font-weight: 700;
+  color: #232d3f;
+}
 
-  .classification li {
-    font-size: 12px;
-    margin-left: 20px;
-  }
+.anime__card__details h3 span:nth-child(1) {
+  font-weight: 500;
+}
 
-  .clan__card {}
+.classification li {
+  font-size: 12px;
+  margin-left: 20px;
+}
 
-  .clan__card__name {
-    font-size: 20px;
-  }
+.clan__card {
+}
+
+.clan__card__name {
+  font-size: 20px;
+}
